Добавил Страница каталога Седона

--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>     <!--основная навигация конец  -->
     </div>
-  </header> <!--хедер страницы конец  -->
+  </header> <!--хедер  конец  -->
     <main class="container"> <!--основной контейнер страницы -->
     <div class= "selection">
       <div class="selection-left"> <!--сортировка -->
