Главная страница Седона

--- a/index.html
+++ b/index.html
@@ -2,11 +2,137 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
   </head>
   <body>
+    <header class="main-header">     <!--хедер страницы  -->
+       <div class="container">
+         <nav class="main-navigation">          <!--Основная навигация  -->
+           <ul>
+             <li>
+               <a href="#">Информация</a>
+             </li>
+             <li>
+               <a href="#">Фото и видео</a>
+             </li>
+             <li>
+               <a href="#">Карта штата</a>
+             </li>
+             <li>
+               <a href="catalog.html">Гостиницы</a>
+             </li>
+           </ul>
+         </nav>     <!--основная навигация конец  -->
+         <div class="header-logo">   <!-- лого в шапке -->
+           <img src="http://placehold.it/150x100" alt="city of sedona">
+         </div>
+       </div>
+    </header> <!--хедер страницы конец  -->
+    <main class="cotainer"> <!--основной контейнер страницы -->
+      <div class="image-main">
+      <img src="http://placehold.it/150x100" alt="Sedona">  <!-- изображение в шапке -->
+      </div>
+        <div class="features">
+          <h1>Седона неболщой городок в Аризоне заслуживающий большего </h1>
+          <p>Рассмотрим 5 причин по которым Седона, круче чем гранд каньон!</p>
+          <div class="features-item1">
+            <div class="features-item-left">
+              <b class="features-name">Настоящий городок</b>
+              <span>-№1-</span>
+              <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
+            <div class="features-item-right">
+              <img src="http://placehold.it/150x100" alt="" >
+            </div>
+          </div>
+          <div class="features-item 2">
+            <div class="features-item">
+              <b class="features-name">Жилье</b>
+              <p>Рекомендуем пожить как в настоящем мотеле, все как в кино!</p>
+            </div>
+            <div class="features-item">
+              <b class="features-name">Еда</b>
+              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+            </div>
+            <div class="features-item">
+            <b class="features-name">Сувениры</b>
+            <p>Не только китайского, но и местеого производства</p>
+          </div>
+          <div class="features-item 3">
+            <div class="features-item-left">
+              <img src="http://placehold.it/150x100" alt="" >
+            </div>
+            <div class="features-item-right">
+              <b class="features-name">Там есть мост дьявола</b>
+              <span>-№2-</span>
+              <p>Да, по нему можно пройтись, если вы осмелитись</p>
+            </div>
+          </div>
+          <div class="features-item 4">
+            <div class="features-item">
+              <b class="features-name">Небольшая площадь</b>
+              <span>-№3-</span>
+              <p>все достопримечательности находяться очень близко</p>
+            </div>
+            <div class="features-item">
+              <b class="features-name">Красивая дорога</b>
+              <span>-№4-</span>
+              <p>Ехать в седону из лас-вегаса совсем не скучго!</p>
+            </div>
+            <div class="features-item">
+              <b class="features-name">Мало туристов</b>
+              <span>-№5-</span>
+              <p>Большинство едет в гранд каньон и топится там</p>
+            </div>
+          </div>
+        </div>
+          <div class="index-content"> <!-- блок поиска отелей начало -->
+            <h2 class="index-content-title">Заинтересовались?</h2>
+            <p>Укажите предполагаемые даты поездки,<br>
+             и мы покажем вам лучшие предложения гостиниц в седоне </p>
+             <div class="index-seach">
+               <p> Поиск гостиниц в седоне</p>
+               <form action="#" method="get">
+                 <div class="seach">
+                   <label for="date-check-in">Дата заезда</label>
+                   <input type="date" name="date-check-in">
+                 </div>
+                 <div class="seach">
+                   <label for="date-check-out">Дата выезда</label>
+                   <input type="date" name="date-check-out">
+                 </div>
+                 <div class="seach">
+                   <label for="adult">Взрослые</label>
+                   <input type="number" min="1" max="4" step="1" name="adult">
+                 </div>
+                 <div class="seach">
+                   <label for="child">Дети</label>
+                   <input type="number" min="1" max="4" step="1" name="child">
+                 </div>
+                 <div class="seach">
+                  <input type="submit" value="Найти">
+                 </div>
+               </form>
+            </div>
+          </div><!-- блок поиска отелей конец -->
+    <footer class="main-footer"> <!--футер начало-->
+        <div class="container">
+          <section class="footer-contacts">
+            #visitsedona
+          </section>
+          <section class="footer-social">
+              <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+              <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+              <a class="social-btn social-btn-youtube" href="#">youtube</a>
+          </section>
+          <section class="footer-copyright">
+            <p>Разработано:</p>
+            <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+          </section>
+        </div>
+    </footer> <!--футер конец-->
+        </div>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    </main>
   </body>
 </html>
