--- a/hotels.html
+++ b/hotels.html
@@ -58,9 +58,9 @@
     </div> <!--сортировка конец-->
     <section class="result">  <!--блок результатов-->
       <div class="result-top">
-        <h2 class="legend-result">Найдено: 3</h2>
+        <strong>Найдено: 3</strong>
         <div class="selection-result">
-          <h2 class="legend-result">Сортировка:</h2>
+          <b>Сортировка:</b>
           <ul>
             <li>
               <a href="#">По цене</a>
@@ -81,31 +81,37 @@
         </div>
       </div>
       <article class="result-item">
-        <img src="http://placehold.it/150x100" alt="Amara Resort Spa" >
+        <img src="http://placehold.it/150x100" alt="Amara Resort Spa">
         <h2 class="legend-result">Amara Resort Spa</h2>
-        <p>Гостиница от 3500 р.</p>
+        <p><span class="type-result">Гостиница</span><span class="price-result">от 3500 р.</span></p>
         <a class="btn-info" href="#">Подробнее</a>
         <a class="btn-buy" href="#">Забронировать</a>
         <mark>рейтинг:8,5</mark>
-        <p class="star-rating"><img src="http://placehold.it/150x100" alt="Рейтинг"/></p>
+        <div class="star-rating">
+          <img src="http://placehold.it/150x100" alt="Рейтинг">
+        </div>
       </article>
       <article class="result-item">
-        <img src="http://placehold.it/150x100" alt="Desert Quail Inn" >
+        <img src="http://placehold.it/150x100" alt="Desert Quail Inn">
         <h2 class="legend-result">Desert Quail Inn</h2>
-        <p>Мотель от 2000 р.</p>
+        <p><span class="type-result">Мотель</span><span class="price-result">от 2000 р.</span></p>
         <a class="btn-info" href="#">Подробнее</a>
         <a class="btn-buy" href="#">Забронировать</a>
         <mark>рейтинг:8,9</mark>
-        <p class="star-rating"><img src="http://placehold.it/150x100" alt="Рейтинг"/></p>
+        <div class="star-rating">
+          <img src="http://placehold.it/150x100" alt="Рейтинг">
+        </div>
       </article>
       <article class="result-item">
-        <img src="http://placehold.it/150x100" alt="Villas At Poco Diablo" >
+        <img src="http://placehold.it/150x100" alt="Villas At Poco Diablo">
         <h2 class="legend-result">Villas at Poco Diablo</h2>
-        <p>Апартаменты от 4000 р.</p>
+        <p><span class="type-result">Апартаменты</span><span class="price-result">от 4000 р.</span></p>
         <a class="btn-info" href="#">Подробнее</a>
         <a class="btn-buy" href="#">Забронировать</a>
         <mark>рейтинг:9,2</mark>
-        <p class="star-rating"><img src="http://placehold.it/150x100" alt="Рейтинг"/></p>
+        <div class="star-rating">
+          <img src="http://placehold.it/150x100" alt="Рейтинг">
+        </div>
       </article>
     </section> <!--блок результатов конец-->
   </main>
