--- a/index.html
+++ b/index.html
@@ -33,67 +33,65 @@
       <img src="http://placehold.it/150x100" alt="Sedona">  <!-- изображение в шапке -->
     </div>
     <div class="features">
-      <h1>Седона небольшой городок в Аризоне заслуживающий большего </h1>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <h1>Седона—небольшой городок в Аризоне, заслуживающий большего</h1>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <div class="features-first">
-        <ul class="features-first-text">
-          <li class="features-name">Настоящий городок</li>
-          <li><span>№1</span></li>
-          <li>Седона не аттракцион для туристов, там течет своя жизнь</li>
-        </ul>
+        <div class="features-first-text">
+          <b>Настоящий городок</b>
+          <span>№1</span>
+          <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
+        </div>
         <div class="features-first-image">
           <img src="http://placehold.it/150x100" alt="City of Sedona">
         </div>
       </div>
-      <div class="features-item">
-        <ul class="features-item-text">
-          <li class="features-name">Жилье</li>
-          <li>Рекомендуем пожить как в настоящем мотеле, все как в кино!</li>
-        </ul>
-        <ul class="features-item-text">
-          <li class="features-name">Еда</li>
-          <li>Всегда заказывайте фирменный бургер, вы не разочаруетесь</li>
-        </ul>
-        <ul class="features-item-text">
-          <li class="features-name">Сувениры</li>
-          <li>Не только китайского, но и местеого производства</li>
-        </ul>
-      </div>
+      <ul class="features-item">
+        <li>
+          <b>Жилье</b>
+          <p>Рекомендуем пожить как в настоящем мотеле, все как в кино!</p>
+        </li>
+        <li>
+          <b>Еда</b>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li>
+          <b>Сувениры</b>
+          <p>Не только китайского, но и местного производства!</p>
+        </li>
+      </ul>
       <div class="features-second">
         <div class="features-second-image">
-          <img src="http://placehold.it/150x100" alt="Canyon of Sedona" >
+          <img src="http://placehold.it/150x100" alt="Canyon of Sedona">
         </div>
-        <ul class="features-second-text">
-          <li class="features-name">Там есть мост дьявола</li>
-          <li><span>№2</span></li>
-          <li>Да, по нему можно пройтись, если вы осмелитись</li>
-        </ul>
+        <div class="features-second-text">
+          <b>Там есть мост дьявола</b>
+          <span>№2</span>
+          <p>Да, по нему можно пройтись, если вы осмелитесь</p>
+        </div>
       </div>
-      <div class="features-items-third-fifth">
-        <ul class="features-item">
-          <li class="features-name">Небольшая площадь</li>
-          <li><span>№3</span></li>
-          <li>все достопримечательности находяться очень близко</li>
-        </ul>
-        <ul class="features-item">
-          <li class="features-name">Красивая дорога</li>
-          <li><span>№4</span></li>
-          <li>Ехать в седону из лас-вегаса совсем не скучно!</li>
-        </ul>
-        <ul class="features-item">
-          <li class="features-name">Мало туристов</li>
-          <li><span>№5</span></li>
-          <li>Большинство едет в гранд каньон и топится там</li>
-        </ul>
-      </div>
+      <ul class="features-items-third-fifth">
+        <li>
+          <b>Небольшая площадь</b>
+          <span>№3</span>
+          <p>Все достопримечательности находяться очень близко</p>
+        </li>
+        <li>
+          <b>Красивая дорога</b>
+          <span>№4</span>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li>
+          <b>Мало туристов</b>
+          <span>№5</span>
+          <p>Большинство едет в Гранд-Каньон и толпится там</p>
+        </li>
+      </ul>
       <div class="index-content"> <!-- блок поиска отелей начало -->
         <h2 class="index-content-title">Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в седоне </p>
+          <a href="#">Поиск гостиниц в Седоне</a>
           <div class="index-seach">
-            <form action="#" method="get">
-              <button type="submit">Поиск гостиниц в седоне</button>
-            </form>
             <form action="#" method="get">
               <div class="form-group">
                 <label for="date-check-in">Дата заезда</label>
@@ -145,4 +143,4 @@
       </div>
     </footer> <!--футер конец-->
   </body>
-  </html>
+</html>
