--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Седона</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">     <!--хедер страницы  -->
@@ -24,17 +25,17 @@
         </ul>
       </nav>     <!--основная навигация конец  -->
       <div class="header-logo">   <!-- лого в шапке -->
-        <img src="http://placehold.it/150x100" alt="City of Sedona">
+        <img src="img/index/logo-header.png" width="138" height="70" alt="City of Sedona">
       </div>
     </div>
   </header> <!--хедер страницы конец  -->
   <main class="container"> <!--основной контейнер страницы -->
     <div class="image-main">
-      <img src="http://placehold.it/150x100" alt="Sedona">  <!-- изображение в шапке -->
+      <img src="img/index/intro_sedona.jpg" width="1200" height="773" alt="Sedona">  <!-- изображение в шапке -->
     </div>
     <div class="features">
-      <h1>Седона—небольшой городок в Аризоне, заслуживающий большего</h1>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      <h1 class="big-text">Седона—небольшой городок в Аризоне, заслуживающий большего</h1>
+      <p class="features-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <div class="features-first">
         <div class="features-first-text">
           <b>Настоящий городок</b>
@@ -42,7 +43,7 @@
           <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
         <div class="features-first-image">
-          <img src="http://placehold.it/150x100" alt="City of Sedona">
+          <img src="img/index/Features-top.jpg" width="800" height="256" alt="City of Sedona">
         </div>
       </div>
       <ul class="features-item">
@@ -61,7 +62,7 @@
       </ul>
       <div class="features-second">
         <div class="features-second-image">
-          <img src="http://placehold.it/150x100" alt="Canyon of Sedona">
+          <img src="img/index/Features-bottom.jpg" width="800" height="256" alt="Canyon of Sedona">
         </div>
         <div class="features-second-text">
           <b>Там есть мост дьявола</b>
@@ -90,7 +91,7 @@
         <h2 class="index-content-title">Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в седоне </p>
-          <a href="#">Поиск гостиниц в Седоне</a>
+          <a class="big-text search" href="#">Поиск гостиниц в Седоне</a>
           <div class="index-seach">
             <form action="#" method="get">
               <div class="form-group">
@@ -116,20 +117,20 @@
                 <button type="button">+</button>
               </div>
               <div class="form-group">
-                <input type="submit" value="Найти">
+                <input class="big-text search" type="submit" value="Найти">
               </div>
             </form>
           </div>
         </div><!-- блок поиска отелей конец -->
         <div class="map">
-          <img src="http://placehold.it/150x100" alt="Карта"> <!--карта картинка-->
+          <img src="img/index/map.jpg" width="1200" height="593" alt="Карта"> <!--карта картинка-->
         </div>
       </div>
     </main>
     <footer class="main-footer"> <!--футер начало-->
       <div class="container">
         <div class="footer-contacts">
-          <a href="#">#Visitsedona</a>
+          <a class="big-text" href="#">#Visitsedona</a>
         </div>
         <div class="footer-social">
           <a class="social-btn social-btn-tv" href="#">Твиттер</a>
