--- a/hotels.html
+++ b/hotels.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header class="main-header"> <!--хедер страницы  -->
-    <a class="header-logo" href="/"><img src="//placehold.it/138x70" width="138" height="70" alt="Sedona logo"></a>
+    <a class="header-logo" href="/"><img src="img/index/logo-header.png" width="138" height="70" alt="Sedona logo"></a>
     <div class="container">
       <nav class="main-navigation">          <!--Основная навигация  -->
         <ul>
@@ -81,36 +81,36 @@
         </div>
       </div>
       <article class="result-item">
-        <img src="http://placehold.it/150x100" alt="Amara Resort Spa">
+        <img src="img/hotels/hotels-top.jpg" width="135" height="90" alt="Amara Resort Spa">
         <h2 class="legend-result">Amara Resort Spa</h2>
-        <p><span class="type-result">Гостиница</span><span class="price-result">от 3500 р.</span></p>
+        <p><span class="type-result">Гостиница</span><span class="price-result">от 4000 р.</span></p>
         <a class="btn-info" href="#">Подробнее</a>
         <a class="btn-buy" href="#">Забронировать</a>
         <mark>рейтинг:8,5</mark>
         <div class="star-rating">
-          <img src="http://placehold.it/150x100" alt="Рейтинг">
+          <img src="img/hotels/star4.png" width="89" height="17" alt="Рейтинг">
         </div>
       </article>
       <article class="result-item">
-        <img src="http://placehold.it/150x100" alt="Desert Quail Inn">
+        <img src="img/hotels/hotels-bottom.jpg" width="135" height="90" alt="Desert Quail Inn">
         <h2 class="legend-result">Desert Quail Inn</h2>
-        <p><span class="type-result">Мотель</span><span class="price-result">от 2000 р.</span></p>
+        <p><span class="type-result">Мотель</span><span class="price-result">от 3000 р.</span></p>
         <a class="btn-info" href="#">Подробнее</a>
         <a class="btn-buy" href="#">Забронировать</a>
         <mark>рейтинг:8,9</mark>
         <div class="star-rating">
-          <img src="http://placehold.it/150x100" alt="Рейтинг">
+          <img src="img/hotels/star3.png" width="65" height="17" alt="Рейтинг">
         </div>
       </article>
       <article class="result-item">
-        <img src="http://placehold.it/150x100" alt="Villas At Poco Diablo">
+        <img src="img/hotels/hotels-bottom.jpg" width="135" height="90" alt="Villas At Poco Diablo">
         <h2 class="legend-result">Villas at Poco Diablo</h2>
-        <p><span class="type-result">Апартаменты</span><span class="price-result">от 4000 р.</span></p>
+        <p><span class="type-result">Апартаменты</span><span class="price-result">от 2000 р.</span></p>
         <a class="btn-info" href="#">Подробнее</a>
         <a class="btn-buy" href="#">Забронировать</a>
         <mark>рейтинг:9,2</mark>
         <div class="star-rating">
-          <img src="http://placehold.it/150x100" alt="Рейтинг">
+          <img src="img/hotels/star2.png" width="42" height="17" alt="Рейтинг">
         </div>
       </article>
     </section> <!--блок результатов конец-->
