--- a/hotels.html
+++ b/hotels.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Седона: отели</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header"> <!--хедер страницы  -->
