Внес изменения графика 1

--- a/hotels.html
+++ b/hotels.html
@@ -83,23 +83,25 @@
       </div>
       <article class="result-item">
         <img src="img/hotels/hotels-top.jpg" width="135" height="90" alt="Amara Resort Spa">
-        <h2 class="legend-result">Amara Resort Spa</h2>
+        <h2 class="legend-result">Amara Resort & Spa</h2>
         <p><span class="type-result">Гостиница</span><span class="price-result">от 4000 р.</span></p>
         <a class="btn-info" href="#">Подробнее</a>
         <a class="btn-buy" href="#">Забронировать</a>
         <mark>рейтинг:8,5</mark>
         <div class="star-rating">
+          <i class="hotel-rating hotel-rating-four"></i>
           <img src="img/hotels/star4.png" width="89" height="17" alt="Рейтинг">
         </div>
       </article>
       <article class="result-item">
-        <img src="img/hotels/hotels-bottom.jpg" width="135" height="90" alt="Desert Quail Inn">
+        <img src="img/hotels/hotels-middle.jpg" width="135" height="90" alt="Desert Quail Inn">
         <h2 class="legend-result">Desert Quail Inn</h2>
         <p><span class="type-result">Мотель</span><span class="price-result">от 3000 р.</span></p>
         <a class="btn-info" href="#">Подробнее</a>
         <a class="btn-buy" href="#">Забронировать</a>
         <mark>рейтинг:8,9</mark>
         <div class="star-rating">
+          <i class="hotel-rating hotel-rating-three"></i>
           <img src="img/hotels/star3.png" width="65" height="17" alt="Рейтинг">
         </div>
       </article>
@@ -111,6 +113,7 @@
         <a class="btn-buy" href="#">Забронировать</a>
         <mark>рейтинг:9,2</mark>
         <div class="star-rating">
+          <i class="hotel-rating hotel-rating-two"></i>
           <img src="img/hotels/star2.png" width="42" height="17" alt="Рейтинг">
         </div>
       </article>
@@ -128,7 +131,7 @@
       </div>
       <div class="footer-copyright">
         <span>Website by</span>
-        <a class="btn-logo" href="https://htmlacademy.ru">HTML Academy</a>
+        <a href="https://htmlacademy.ru"><img src="img/hotels/footer-lofo.svg" width="113" height="39" alt="HTML Academy"></a>
       </div>
     </div>
   </footer> <!--футер конец-->
