--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="main-header">     <!--хедер страницы  -->
     <div class="container">
       <nav class="main-navigation">          <!--Основная навигация  -->
-        <ul class="menu">
+        <ul class="header-menu">
           <li>
             <a href="#">Информация</a>
           </li>
@@ -39,7 +39,7 @@
       <p class="features-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <div class="features-first">
         <div class="features-first-text">
-          <b>Настоящий городок</b>
+          <h2><b>Настоящий городок</b></h2>
           <span>№1</span>
           <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
@@ -66,7 +66,7 @@
           <img src="img/index/Features-bottom.jpg" width="800" height="256" alt="Canyon of Sedona">
         </div>
         <div class="features-second-text">
-          <b>Там есть мост дьявола</b>
+          <h2><b>Там есть мост дьявола</b></h2>
           <span>№2</span>
           <p>Да, по нему можно пройтись, если вы осмелитесь</p>
         </div>
