доработка сетки (в процессе 1)

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
   </header> <!--хедер страницы конец  -->
   <main class="container shadow"> <!--основной контейнер страницы -->
     <div class="image-main">
-      <img src="img/index/intro_sedona.jpg" width="1200" height="773" alt="Sedona">  <!-- изображение в шапке -->
+    <!-- изображение в шапке -->
     </div>
     <div class="features">
-      <h1 class="big-text">Седона—небольшой городок в Аризоне, заслуживающий большего</h1>
+      <h1 class="big-text">Седона — небольшой городок в Аризоне, <span>заслуживающий большего!</span></h1>
       <p class="features-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <div class="features-first">
         <div class="features-first-text">
-          <h2><b>Настоящий городок</b></h2>
-          <span>№1</span>
+        <b>Настоящий <span>городок</span></b>
+          <span class="number">№1</span>
           <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
         <div class="features-first-image">
