--- a/hotels.html
+++ b/hotels.html
@@ -131,7 +131,7 @@
       </div>
       <div class="footer-copyright">
         <span>Website by</span>
-        <a href="https://htmlacademy.ru"><img src="img/hotels/footer-lofo.svg" width="113" height="39" alt="HTML Academy"></a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/hotels/footer-lofo.svg" width="113" height="39" alt="HTML Academy"></a>
       </div>
     </div>
   </footer> <!--футер конец-->
