--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
         </div><!-- блок поиска отелей конец -->
         <div class="map">
-          <img src="img/index/map.jpg" width="1200" height="593" alt="Карта"> <!--карта картинка-->
+           <!--карта картинка-->
         </div>
       </div>
     </main>
@@ -140,7 +140,7 @@
         </div>
         <div class="footer-copyright">
           <span>Website by</span>
-          <a class="btn-logo" href="https://htmlacademy.ru">HTML Academy</a>
+          <a class="btn-logo" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
         </div>
       </div>
     </footer> <!--футер конец-->
