--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
   </header> <!--хедер страницы конец  -->
   <main class="container shadow"> <!--основной контейнер страницы -->
     <div class="image-main">
-    <!-- изображение в шапке -->
+      <!-- изображение в шапке -->
     </div>
     <div class="features">
       <h1 class="big-text">Седона — небольшой городок в Аризоне, <span>заслуживающий большего!</span></h1>
       <p class="features-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <div class="features-first">
         <div class="features-first-text">
-        <b>Настоящий <span>городок</span></b>
+          <b>Настоящий <span>городок</span></b>
           <span class="number">№1</span>
           <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
@@ -49,16 +49,16 @@
       </div>
       <ul class="features-item">
         <li>
-          <b>Жилье</b>
-          <p>Рекомендуем пожить как в настоящем мотеле, все как в кино!</p>
+          <b class="features-item-title">Жилье</b>
+          <p class="features-item-description">Рекомендуем пожить как в настоящем <span>мотеле, все как в кино!</span></p>
         </li>
         <li>
-          <b>Еда</b>
-          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          <b class="features-item-title">Еда</b>
+          <p class="features-item-description">Всегда заказывайте фирменный бургер, <span>вы не разочаруетесь!</span></p>
         </li>
         <li>
-          <b>Сувениры</b>
-          <p>Не только китайского, но и местного производства!</p>
+          <b class="features-item-title">Сувениры</b>
+          <p class="features-item-description">Не только китайского, <span>но и местного производства!</span></p>
         </li>
       </ul>
       <div class="features-second">
@@ -73,8 +73,8 @@
       </div>
       <ul class="features-items-third-fifth">
         <li>
-          <b>Небольшая площадь</b>
-          <span>№3</span>
+          <b>Небольшая  <span>площадь</span></b>
+          <span class="number">№3</span>
           <p>Все достопримечательности находяться очень близко</p>
         </li>
         <li>
@@ -92,7 +92,7 @@
         <h2 class="index-content-title">Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в седоне </p>
-          <a class="big-text search" href="#">Поиск гостиниц в Седоне</a>
+          <a class="big-text search decoration" href="#">Поиск гостиниц в Седоне</a>
           <div class="index-search">
             <form action="#" method="get">
               <div class="form-group">
@@ -124,7 +124,7 @@
           </div>
         </div><!-- блок поиска отелей конец -->
         <div class="map">
-           <!--карта картинка-->
+          <!--карта картинка-->
         </div>
       </div>
     </main>
@@ -145,4 +145,4 @@
       </div>
     </footer> <!--футер конец-->
   </body>
-</html>
+  </html>
